# crystgrowthfunctions

./: LICENSE  README.md  SPKG.rst  setup.cfg  spkg-install.sh
examples/: .filo.txt  4444.ps  Untitled.ipynb  example.sage  example.sage.py  examples.ipynb
examples/.ipynb_checkpoints/: examples-checkpoint.ipynb
examples/output/diagramy/: 43433_parallelogram.ps
examples/tessellations/3d/: Pm3.txt  p23.txt  p432.txt  pm3m3.txt
examples/tessellations/centered/: 12123_centered.txt  1264_centered.txt  333333_centered.txt  44333_centered.txt  6363_centered.txt  6434_centered.txt  666_centered.txt
examples/tessellations/crystalographic_groups_2d/: c2mm.txt  cm.txt  p1.txt  p2mg.txt  p3.txt  p31m.txt  p3m1.txt  p4.txt  p4mm.txt  p6mm.txt  pm.txt  test_lat.txt
examples/tessellations/topologically_distinct_tillings/: 43433.txt
src/: config_dox
src/crystgrowthpoly/: __init__.py  growth_function.py  private.py  public.py  visualisation.py
src/crystgrowthpoly.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/crystgrowthpoly/html/: annotated.html  classcrystgrowthpoly_1_1private_1_1Triangle-members.html  classcrystgrowthpoly_1_1private_1_1Triangle.html  classcrystgrowthpoly_1_1public_1_1Polygon-members.html  classcrystgrowthpoly_1_1public_1_1Polygon.html  classcrystgrowthpoly_1_1public_1_1Tesselation-members.html  classcrystgrowthpoly_1_1public_1_1Tesselation.html  (+4 more)
src/example_package_YOUR_USERNAME_HERE.egg-info/: PKG-INFO  SOURCES.txt
test/: crystalographical_growth_functions_test.py  regions_test.py  topological_functions_test.py
test/input/: p2.txt  pg.txt
(+14 files in other folders)
